--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
   	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 <header>
@@ -18,11 +20,11 @@
 	<button class="submit-buttons" type="submit" id="approved-events">Approved Events</button>
 </div>			
 <div class="results hidden">
-	<div class="result-display">
+	<div class="js-result-display" id="accordion">
 	</div>
 	<div class="map" id="map""></div>
 </div>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 <script type="text/javascript" src="app.js"></script>
 <!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVNbQlwhKLMfETuLv_1JFmyVHiBaoQRBw&callback=initMap"></script>-->
 </body>
