Add of map and collapsable elements
-add of Google map but does not currently display
-add collapsable functionalty for result-panes
-add of future geocoding function but no functionality

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <div class="results hidden">
 	<div class="js-result-display">
 	</div>
-	<div class="map" id="map""></div>
+	<div class="map" id="map"></div>
 </div>
 
 <script type="text/javascript" src="app.js"></script>
-<!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVNbQlwhKLMfETuLv_1JFmyVHiBaoQRBw&callback=initMap"></script>-->
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVNbQlwhKLMfETuLv_1JFmyVHiBaoQRBw&callback=initializeMap"></script>
 </body>
 </html>
