Fix of Google Map
-Functional Google map
-Add CSS styling of HTML and body elements
-Add CSS styling for dimensions of elements within div.results

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 	<button class="submit-buttons" type="submit" id="approved-events">Approved Events</button>
 </div>			
 <div class="results hidden">
-	<div class="js-result-display">
-	</div>
+	<div class="js-result-display"></div>
 	<div class="map" id="map"></div>
 </div>
 
