add responsive-grid stylesheet to fix format issues

--- a/index.html
+++ b/index.html
@@ -3,27 +3,45 @@
 <head>
 	<title>NYC Activity Explorer</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="response-grid.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
   	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<header>
-	<h2>NYC Activity Explorer</h2>
-	<h3>Explore the various amenities around the five boroughs</h3>
-</header>
-<div class="button-nav">
-	<button class="submit-buttons" type="submit" id="playgrounds">Playgrounds</button>
-	<button class="submit-buttons" type="submit" id="tracks">Tracks</button>
-	<button class="submit-buttons" type="submit" id="ice-rinks">Ice Rinks</button>
-	<button class="submit-buttons" type="submit" id="approved-events">Approved Events</button>
-</div>			
-<div class="results hidden">
-	<div class="js-result-display"></div>
-	<div class="map" id="map"></div>
-</div>
-
+	<main>
+		<header class="title">
+			<div class="row">
+				<div class="col-12">
+					<h2>NYC Activity Explorer</h2>
+					<h3>Explore the various amenities around the five boroughs</h3>
+				</div>
+			</div>
+		</header>
+		<div class="row">
+			<div class="col-12">
+				<div class="button-nav">
+					<button class="submit-buttons" type="submit" id="playgrounds">Playgrounds</button>
+					<button class="submit-buttons" type="submit" id="tracks">Tracks</button>
+					<button class="submit-buttons" type="submit" id="ice-rinks">Ice Rinks</button>
+					<button class="submit-buttons" type="submit" id="approved-events">Approved Events</button>
+				</div>		
+			</div>
+		</div>
+		<div class="row results hidden">
+			
+				<div class="col-4">
+					<div class="js-result-display"></div>
+				</div>
+				<div class="col-8">
+					<div class="map-wrapper">
+						<div class="map" id="map"></div>
+					</div>
+				</div>
+		
+		</div>
+	</main>
 <script type="text/javascript" src="app.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVNbQlwhKLMfETuLv_1JFmyVHiBaoQRBw&callback=initializeMap"></script>
 </body>
