--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>NYC Activity Explorer</title>
+	<title>Borough Guid</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" type="text/css" href="response-grid.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
   	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  	<script type="text/javascript" src="http://momentjs.com/downloads/moment.js"></script>
 </head>
 <body>
 	<main>
 		<header class="title">
 			<div class="row">
 				<div class="col-12">
-					<h2>NYC Activity Explorer</h2>
-					<h3>Explore the various amenities around the five boroughs</h3>
+					<h2>Borough Guide</h2>
+					<h3>Explore the various amenities and events around the five boroughs of New York</h3>
 				</div>
 			</div>
 		</header>
