Add of major geocoding functionality
-add state object to contain map variable so as to make it accessible
throughout
-add filterApiData function that calls API data as arguments for two functions
-add initializeGoogle function to send google API callback to two
functions
-fix of createAddress to clip address strings which prevents user errors
from API data
-fix of codeAddress to successfully handle createAddress results and
display markers
-error message now appears for the createAddress function that doesn't
seem to affect functionality

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Borough Guid</title>
+	<title>Borough Guide</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" type="text/css" href="response-grid.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
@@ -42,7 +42,7 @@
 		
 		</div>
 	</main>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVNbQlwhKLMfETuLv_1JFmyVHiBaoQRBw&callback=initializeGoogle"></script>
 <script type="text/javascript" src="app.js"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVNbQlwhKLMfETuLv_1JFmyVHiBaoQRBw&callback=initializeMap"></script>
 </body>
 </html>
