--- a/index.html
+++ b/index.html
@@ -30,16 +30,22 @@
 			</div>
 		</div>
 		<div class="row results hidden">
-			
-				<div class="col-4">
-					<div class="js-result-display"></div>
+			<div class="col-12">
+				<div class="search-wrapper">
+					<input placeholder="Pilates" id="search" type="text" name="search-bar">
+					<button id="search" type="submit">Search</button>
 				</div>
-				<div class="col-8">
-					<div class="map-wrapper">
-						<div class="map" id="map"></div>
-					</div>
+			</div>
+			<div class="col-4">
+				<div class="js-result-display"></div>
+				<button class="nav prev">Prev</button>
+				<button class="nav next">Next</button>
+			</div>
+			<div class="col-8">
+				<div class="map-wrapper">
+					<div class="map" id="map"></div>
 				</div>
-		
+			</div>	
 		</div>
 	</main>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVNbQlwhKLMfETuLv_1JFmyVHiBaoQRBw&callback=initializeGoogle"></script>
