add of set height for map-wrapper below small screen widths

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="col-12">
 				<div class="search-wrapper">
 					<input placeholder="Pilates" id="search" type="text" name="search-bar">
-					<button id="search" type="submit">Search</button>
+					<button id="search-submit" type="submit">Search</button>
 				</div>
 			</div>
 			<div class="col-4">
