add of event-listener for search submit
-add of additional styles to improve UI at varying widths
-add form to index.html to streamline user submissions

--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
 		</div>
 		<div class="row results hidden">
 			<div class="col-12">
-				<div class="search-wrapper">
+				<form class="search-wrapper">
 					<input placeholder="Pilates" id="search" type="text" name="search-bar">
 					<button id="search-submit" type="submit">Search</button>
-				</div>
+				</form>
 			</div>
 			<div class="col-4">
 				<div class="js-result-display"></div>
-				<button class="nav prev">Prev</button>
-				<button class="nav next">Next</button>
+				<div class="nav-wrapper">
+					<button class="nav prev">Prev</button>
+					<button class="nav next">Next</button>
+				</div>
 			</div>
 			<div class="col-8">
 				<div class="map-wrapper">
