lower limit of display results to prevent hitting query limits

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<div class="col-4">
 				<div class="js-result-display"></div>
 				<div class="nav-wrapper">
-					<button class="nav prev">Prev</button>
+					<button class="nav js-nav-prev hidden">Prev</button>
 					<button class="nav next">Next</button>
 				</div>
 			</div>
