add of key features and style changes
-add of state key to hold NY open data api call data
-add of state key to hold geocode data from google api call but not
functional
-add if statement to remove borough from NY open data api call if no
borough selected
-add event listener to initialize map on page load
-add switch function to select map options based on borough selection
-add function to add map markers but not yet functional
-add error message to display if no results are found

--- a/index.html
+++ b/index.html
@@ -43,21 +43,14 @@
 			</form>
 		</div>
 		<div class="row results hidden">
-			<div class="col-4">
-				<div class="js-result-display"></div>
-				<div class="nav-wrapper">
-					<button class="nav js-nav-prev hidden">Prev</button>
-					<button class="nav next">Next</button>
-				</div>
-			</div>
-			<div class="col-8">
+			<div class="col-12">
 				<div class="map-wrapper">
 					<div class="map" id="map"></div>
 				</div>
 			</div>	
 		</div>
 	</main>
-<!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVNbQlwhKLMfETuLv_1JFmyVHiBaoQRBw&callback=initializeGoogle"></script>-->
+<script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVNbQlwhKLMfETuLv_1JFmyVHiBaoQRBw&callback=initializeGoogle"></script>
 <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
