add of radio button styling to improve UI at low screen widths

--- a/index.html
+++ b/index.html
@@ -25,11 +25,21 @@
 					<input placeholder=" Central Park" id="search" type="text" name="search-bar">
 					<button id="search-submit" type="submit">Submit</button><br>
 					<div class="radios">
+						<span class="radio">
 							<input type="radio" name="borough" value="Manhattan"> Manhattan
+						</span>	
+						<span class="radio">
 							<input type="radio" name="borough" value="Brooklyn"> Brooklyn
+						</span>	
+						<span class="radio">
 							<input type="radio" name="borough" value="Queens"> Queens
+						</span>
+						<span class="radio">
 							<input type="radio" name="borough" value="Staten Island"> Staten Island
+						</span>
+						<span class="radio">
 							<input type="radio" name="borough" value="" checked> All
+						</span>
 					</div>
 				</fieldset>
 			</form>
