Add of styling fixes for UI and functional nav buttons

--- a/index.html
+++ b/index.html
@@ -45,8 +45,14 @@
 			</form>
 		</div>
 		<div class="row results hidden">
-			<div class="col-12">
+			<div class="col-12 result-col">
 				<div class="js-result-display"></div>
+			</div>
+			<div class="col-12">
+				<div class="results-nav">
+					<button class="js-prev hidden">Prev</button>
+					<button class="next">Next</button>
+				<div>
 			</div>	
 		</div>
 	</main>
