add of nav button features and styling

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<div class="col-12">
 				<div class="results-nav">
 					<button class="js-prev hidden">Prev</button>
-					<button class="next">Next</button>
+					<button class="js-next">Next</button>
 				<div>
 			</div>	
 		</div>
