bug fix of persistent Previous nav button and minor style changes

--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="response-grid.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
   	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
 	<main>
 		<header class="title">
 			<div class="row">
 				<div class="col-12">
-					<h2>Borough Public Bathroom Guide</h2>
-					<h3>For when you're out and there's no Starbucks in sight...</h3>
+					<h2>Five Borough Public Parks Bathroom Guide</h2>
+					<h3>For when you're out enjoying the parks of New York and there's no Starbucks in sight...</h3>
 				</div>
 			</div>
 		</header>
@@ -22,7 +21,7 @@
 			<form class="col-12">
 				<fieldset>
 					<legend>Where do you need to go?</legend>
-					<input placeholder=" Central Park" id="search" type="text" name="search-bar">
+					<input placeholder="Try searching for a street or park name..." id="search" type="search" name="search-bar">
 					<button id="search-submit" type="submit">Submit</button><br>
 					<div class="radios">
 						<span class="radio">
@@ -56,6 +55,7 @@
 			</div>	
 		</div>
 	</main>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
