add of background image and styling as well as result styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</header>
 		<div class="row">
 			<form class="col-12">
-				<fieldset>
+				<fieldset class="search-form">
 					<legend>Where do you need to go?</legend>
 					<input placeholder="Try searching for a street or park name..." id="search" type="search" name="search-bar">
 					<button id="search-submit" type="submit">Submit</button><br>
