--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="response-grid.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
   	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  	<link rel="icon" type="image/jpeg" href="images/toilet_sign.jpeg">
 </head>
 <body class="darken">
 	<main>
