add of styling changes recommended by project review

--- a/index.html
+++ b/index.html
@@ -13,20 +13,23 @@
 		<header class="title">
 			<div class="row">
 				<div class="col-12">
-					<h2>Five Borough Public Parks Bathroom Guide</h2>
-					<h3>For when you're out enjoying the parks of New York and there's no Starbucks in sight...</h3>
+					<h1>Five Borough Public Parks Bathroom Guide</h1>
+					<h2>For when you're out enjoying the parks of New York and there's no Starbucks in sight...</h2>
 				</div>
 			</div>
 		</header>
 		<div class="row">
 			<form class="col-12">
 				<fieldset class="search-form">
-					<legend>Where do you need to go?</legend>
-					<input placeholder="Try searching for a street or park name..." id="search" type="search" name="search-bar">
+					<legend><h3>Where do you need to go?</h3></legend>
+					<input placeholder="Try searching 'Central Park' or '14th street' " id="search" type="search" name="search-bar">
 					<button id="search-submit" type="submit">Submit</button><br>
 					<div class="radios">
 						<span class="radio">
 							<input type="radio" name="borough" value="Manhattan"> Manhattan
+						</span>	
+						<span class="radio">
+							<input type="radio" name="borough" value="Bronx"> Bronx
 						</span>	
 						<span class="radio">
 							<input type="radio" name="borough" value="Brooklyn"> Brooklyn
