--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 			<div class="row">
 				<div class="col-12">
 					<h1>Five Borough Public Parks Bathroom Guide</h1>
-					<h2>For when you're out enjoying the parks of New York and there's no Starbucks in sight...</h2>
+					<h2>For when you're out enjoying the parks of New York and need to make a pit stop...</h2>
 				</div>
 			</div>
-		</header>
+		</header><!--Header end-->
 		<div class="row">
 			<form class="col-12">
 				<fieldset class="search-form">
 					<legend><h3>Where do you need to go?</h3></legend>
 					<input placeholder="Try searching 'Central Park' or '14th street' " id="search" type="search" name="search-bar">
-					<button id="search-submit" type="submit">Submit</button><br>
+					<button id="search-submit" type="submit">Gotta Go!</button><br>
 					<div class="radios">
 						<span class="radio">
 							<input type="radio" name="borough" value="Manhattan"> Manhattan
@@ -57,7 +57,7 @@
 					<button class="js-next">Next</button>
 				<div>
 			</div>	
-		</div>
+		</div><!--wrapper to contain search results-->
 	</main>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="app.js"></script>
