add of styling to radio buttons and search bar for ux improvements

--- a/index.html
+++ b/index.html
@@ -25,24 +25,30 @@
 					<input placeholder="Try searching 'Central Park' or '14th street' " id="search" type="search" name="search-bar">
 					<button id="search-submit" type="submit">Gotta Go!</button><br>
 					<div class="radios">
-						<span class="radio">
-							<input type="radio" name="borough" value="Manhattan"> Manhattan
-						</span>	
-						<span class="radio">
-							<input type="radio" name="borough" value="Bronx"> Bronx
-						</span>	
-						<span class="radio">
-							<input type="radio" name="borough" value="Brooklyn"> Brooklyn
-						</span>	
-						<span class="radio">
-							<input type="radio" name="borough" value="Queens"> Queens
-						</span>
-						<span class="radio">
-							<input type="radio" name="borough" value="Staten Island"> Staten Island
-						</span>
-						<span class="radio">
-							<input type="radio" name="borough" value="" checked> All
-						</span>
+						<label class="radio">
+							<input type="radio" name="borough" value="Manhattan">
+							<span>Manhattan</span>
+						</label>	
+						<label class="radio">
+							<input type="radio" name="borough" value="Bronx">
+							<span>Bronx</span>
+						</label>	
+						<label class="radio">
+							<input type="radio" name="borough" value="Brooklyn"> 
+							<span>Brooklyn</span>
+						</label>	
+						<label class="radio">
+							<input type="radio" name="borough" value="Queens">
+							<span>Queens</span>
+						</label>
+						<label class="radio">
+							<input type="radio" name="borough" value="Staten Island">
+							<span>Staten Island</span>
+						</label>
+						<label class="radio">
+							<input type="radio" name="borough" value="" checked>
+							<span>All</span>
+						</label>
 					</div>
 				</fieldset>
 			</form>
