--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
 			<form class="col-12">
 				<fieldset class="search-form">
 					<input placeholder="Try searching 'Central Park' or '14th street' " class="search" id="search" type="search" name="search-bar">
-					<button class="search-submit" id="search-submit" type="submit">Gotta Go!</button><br>
+					<button class="search-submit" id="search-submit" type="submit">Gotta Go!</button>
+					<script type="text/javascript">
+						$('#$search-submit').click(function() {
+  							fbq('track', 'Search');
+					</script>
+					<br>
 					<div class="radios">
 						<label class="radio">
 							<input type="radio" name="borough" value="Manhattan">
